--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -144,10 +144,13 @@ main a:hover {
 }
 
 /* MARGINS */
-.skills-heading,
-.projects-heading,
-.connect-heading {
+h1 {
   margin-top: 120px;
+}
+
+/* ABOUT */
+.about {
+  margin-bottom: 120px;
 }
 
 /* COLORS */
