--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ nav a.white {
 .main-info {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -96,26 +96,20 @@ nav a.white {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
 }
 
 .text-div span {
   font-family: "Anton", system-ui;
-  font-size: 64px;
+  font-size: 80px;
   line-height: 1.2;
 }
 
 .text-div p {
-  font-size: 18px;
+  font-size: 20px;
+  text-align: center;
   line-height: 1.6;
   color: #bbbbbb;
-}
-
-.picture-div img {
-  height: 400px;
-  width: 400px;
-  margin-top: -100px;
-  opacity: 0.9;
 }
 
 .arrow-down {
@@ -412,10 +406,6 @@ light-theme form #submit {
   .text-div p {
     font-size: 1.2em;
   }
-  .picture-div img {
-    width: 330px;
-    height: 330px;
-  }
   .main {
     font-size: 14px;
   }
@@ -428,10 +418,6 @@ light-theme form #submit {
   .text-div p {
     font-size: 1.1em;
   }
-  .picture-div img {
-    width: 280px;
-    height: 280px;
-  }
 }
 
 @media (max-width: 850px) {
@@ -443,9 +429,6 @@ light-theme form #submit {
   }
   .text-div p {
     font-size: 1.2em;
-  }
-  .picture-div {
-    display: none;
   }
   section {
     width: 420px;
@@ -478,9 +461,6 @@ light-theme form #submit {
   }
   .text-div p {
     font-size: 10px;
-  }
-  .picture-div {
-    display: none;
   }
   .project {
     height: 160px;
