style: Refactor footer layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ nav {
   gap: 18px;
 }
 
-nav ul {
+ul {
   display: flex;
   list-style: none;
   padding: 0;
@@ -83,7 +83,7 @@ nav a.white {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: url("../icons/HeroGradient.jpg");
+  background-image: url("../img/HeroGradient.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -118,9 +118,17 @@ nav a.white {
 }
 
 /* MAIN */
+.background {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-secondary);
+}
+
 main {
-  max-width: 1200px;
-  padding: 0 25px 25px;
+  max-width: 1100px;
+  padding: 50px;
 }
 
 main p {
@@ -292,25 +300,45 @@ input:invalid ~ button[type="submit"], textarea:invalid ~ button[type="submit"] 
 
 /* FOOTER */
 footer {
+  position: sticky;
+  bottom: 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
-  padding-top: 30px;
-  border-top: .0625em solid var(--color-primary);
+  flex-direction: column;
+  width: 100%;
+  height: 320px;
+  background-color: #141414;
+  color: var(--color-secondary);
+  z-index: -1;
+  overflow: hidden;
 }
 
-.footer-links img {
-  width: 2.5em;
-  height: 2.5em;
-  margin: 0 .625em;
-  padding: .3125em 0;
+.footer-content,
+.footer-links ul,
+.name {
+  display: flex;
+  color: var(--color-primary);
 }
 
-footer h3 {
-  font-family: "Anton", system-ui;
-  font-weight: 100;
+.footer-content {
+  width: 100%;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1005px;
+}
+
+.footer-links {
+  flex-wrap: wrap;
+}
+
+.name {
+  width: 100%;
+  padding-left: 20px;
+  font-size: 220px;
+  font-weight: 900;
+  letter-spacing: -20px;
+  margin-bottom: -40px;
 }
 
 /* CURSOR */
@@ -408,16 +436,21 @@ footer h3 {
     display: none;
   }
   footer {
-    margin-top: 40px;
-    padding-top: 15px;
+    height: 400px;
   }
-  .footer-links img {
-    width: 30px;
-    height: 30px;
+  .footer-content {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
   }
-  footer h3 {
-    font-size: 14px;
-    margin: 5px 0;
+  .footer-links ul {
+    flex-direction: column;
+  }
+  .name {
+    font-size: 65px;
+    letter-spacing: -5px;
+    margin-bottom: -50px;
   }
 }
 
