--- a/styles/style.css
+++ b/styles/style.css
@@ -322,8 +322,8 @@ footer {
 }
 
 .footer-content {
-  width: 100%;
   justify-content: center;
+  width: 100%;
   align-items: flex-start;
   gap: 1005px;
 }
@@ -441,16 +441,21 @@ footer {
   .footer-content {
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    gap: 20px;
+    align-items: left;
+    padding-left: 20px;
+    gap: 40px;
+    font-size: 22px;
+  }
+  .footer-text{
+    font-size: 14px;
   }
   .footer-links ul {
     flex-direction: column;
   }
   .name {
-    font-size: 65px;
+    font-size: 60px;
     letter-spacing: -5px;
-    margin-bottom: -50px;
+    margin-bottom: -20px;
   }
 }
 
@@ -466,5 +471,8 @@ footer {
   }
   .project {
     width: 280px;
+  }
+  .name {
+    font-size: 55px;
   }
 }
