--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ nav a.white {
 
 main {
   max-width: 1100px;
-  padding: 50px;
+  padding-bottom: 50px;
 }
 
 main p {
@@ -328,10 +328,6 @@ footer {
   gap: 1005px;
 }
 
-.footer-links {
-  flex-wrap: wrap;
-}
-
 .name {
   width: 100%;
   padding-left: 20px;
@@ -440,8 +436,7 @@ footer {
   }
   .footer-content {
     flex-direction: column;
-    justify-content: center;
-    align-items: left;
+    align-items: flex-start;
     padding-left: 20px;
     gap: 40px;
     font-size: 22px;
