style: Adjust margins and improve grid layout for projects and skills sections

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,12 +153,7 @@ main a:hover {
 
 /* MARGINS */
 h1 {
-  margin-top: 120px;
-}
-
-/* ABOUT */
-.about {
-  margin-bottom: 120px;
+  margin: 100px 0 50px;
 }
 
 /* COLORS */
@@ -170,11 +165,10 @@ h1 {
 /* PROJECTS */
 .projects {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
   grid-template-rows: auto auto;
   justify-items: center;
   gap: 10px;
-  margin-top: 50px;
 }
 
 .project {
@@ -212,7 +206,7 @@ h1 {
 /*SKILLS */
 .skills {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 12px;
 }
 
@@ -363,22 +357,17 @@ footer {
 @media (max-width: 1260px) {
   .text-div span { font-size: 70px; }
   .text-div p { font-size: 18px; }
-  .projects { grid-template-columns: 1fr 1fr 1fr; }
-  .skills { grid-template-columns: 1fr 1fr 1fr 1fr; }
 }
 @media (max-width: 850px) {
   section {
     width: 420px;
     padding: 20px;
   }
-  .projects { grid-template-columns: 1fr 1fr; }
-  .skills { grid-template-columns: 1fr 1fr 1fr; }
 } 
 
 @media (max-width: 600px) {
   .text-div span { font-size: 3em; }
   .text-div p { font-size: 1.1em; }
-  .projects { grid-template-columns: 1fr; }
 }
 
 /* MOBILE RESPONSIVE */
@@ -389,7 +378,6 @@ footer {
   .text-div span { font-size: 35px; }
   .text-div p { font-size: 10px; }
   main { padding: 0 40px; }
-  .project p { margin-bottom: 0; }
   .skills { grid-template-columns: 1fr 1fr 1fr; }
   .skills p {
     font-size: 12px;
